--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+html{
+    background-color: rgb(1, 182, 1);
+}
+
 #gameContainer{
     display: flex; 
     flex-direction: column; 
@@ -8,7 +12,7 @@
     width: 100%;
     min-height: 100px;
     margin-bottom:30px;
-    border: 4px solid grey;
+    border: 4px solid rgb(201, 201, 201);
     display: flex;
     justify-content: center;
     max-width: 20rem;
@@ -17,7 +21,7 @@
 #playerScreen{
     width: 100%;
     min-height: 100px;
-    border: 4px solid grey;
+    border: 4px solid rgb(201, 201, 201);
     display: flex;
     justify-content: center;
     max-width: 20rem;
